# Interactive-Sudoku-Solver

./: .gitignore  LICENSE  README.md  _config.yml  constraint.js  constraint_display.js  constraint_solver.js  debug.js  examples.js  fast_solver.js  help.html  index.html  package.json  render_page.js  sandbox.html  solver.html  solver_proxy.js  style.css  sudoku.js  sudoku_builder.js  sudoku_grid.js  sudoku_solver.js  util.js  worker.js
solver-wasm/: Cargo.toml
solver-wasm/src/: bit_set.rs  candidate_selector.rs  candidate_set.rs  cell_exclusions.rs  constraint_parser.rs  grid.rs  grid_shape.rs  handler.rs  handler_accumulator.rs  lib.rs  lookup_tables.rs  optimizer.rs  recursion_stack.rs  rng.rs  simple_solver.rs  solver.rs  sum_data.rs  sum_handler.rs  util.rs
solver-wasm/src/api/: mod.rs  types.rs  wasm.rs
solver-wasm/src/constraint/: builder.rs  mod.rs  parser.rs
solver-wasm/src/handlers/: all_different.rs  and.rs  between.rs  binary_constraint.rs  binary_pairwise.rs  box_info.rs  counting_circles.rs  doppelganger_zero.rs  dutch_flatmate_line.rs  equal_size_partitions.rs  false_handler.rs  full_grid_required_values.rs  full_rank.rs  given_candidates.rs  hidden_skyscraper.rs  house.rs  indexing.rs  jigsaw_piece.rs  local_squishable.rs  lockout.rs  lunchbox.rs  mod.rs  nfa_constraint.rs  or.rs  placeholder.rs  priority.rs  rellik.rs  required_values.rs  same_values.rs  same_values_ignore_count.rs  skyscraper.rs  sum.rs  sum_line.rs  test_util.rs  true_handler.rs  unique_value_exclusion.rs  value_indexing.rs  (+2 more)
solver-wasm/tests/: e2e.rs  wiki_cages.json
(+289 files in other folders)
