[package]
name = "solver-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM/native Sudoku solver — killer sudoku prototype"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "solver-cli"
path = "src/bin/cli.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[profile.release]
opt-level = 3
lto = true
